# codereviewer

./: .gitignore  README.md  app.py  code_review_comments.txt  code_review_comments_from github.txt  docker-compose.yml  requirements.txt
common/az_logger/: global_logger.py
git_hub/: client.py  gh_client.py
git_local/: local_client.py
n8n/: ChatGPT_Automatic_Code_Review_in_Gitlab_MR.json
open_ai/: chat_gpt.py  completion.py  openai_code_reviewer.py  pyproject.toml
open_ai/prompt/: llm_prompt.py
settings/: conf.py
